hide firefox scrollbar fix for FF

--- a/src/components/mainpagecomponents/generators/generatorListStyle.css
+++ b/src/components/mainpagecomponents/generators/generatorListStyle.css
@@ -28,6 +28,7 @@
 /* Hide scrollbar for IE and Edge and Firefox*/
 .generatorList {
     -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .cps{
